[gd_scene load_steps=11 format=3 uid="uid://bhj43my7js408"]

[ext_resource type="Script" path="res://Main.gd" id="1_jgbvu"]
[ext_resource type="Script" path="res://src/World.gd" id="2_alcqr"]
[ext_resource type="PackedScene" uid="uid://da61xyvkih0q" path="res://data/scene/MultiplayerMenuMap/MultiplayerMenuMap.tscn" id="3_lya7f"]
[ext_resource type="Script" path="res://src/BrickGroups.gd" id="4_nsdny"]
[ext_resource type="PackedScene" uid="uid://bot4om7nsyg2l" path="res://data/scene/ui/GameCanvas.tscn" id="5_ki5at"]
[ext_resource type="PackedScene" uid="uid://c5aeyr5rirpm4" path="res://data/scene/MultiplayerMenu.tscn" id="5_ti6c5"]
[ext_resource type="PackedScene" uid="uid://b4heya8wtwyuo" path="res://data/scene/ui/EditorCanvas.tscn" id="7_c1osm"]
[ext_resource type="Script" path="res://src/ui/DebugMenu.gd" id="8_cc4qc"]
[ext_resource type="Script" path="res://src/ui/AnimatedPanelContainer.gd" id="9_macom"]
[ext_resource type="FontVariation" uid="uid://ckx3gh6vh6t5e" path="res://data/theme_elements/bold_font_variation.tres" id="10_km8j6"]

[node name="Main" type="Node"]
script = ExtResource("1_jgbvu")

[node name="World" type="Node3D" parent="."]
script = ExtResource("2_alcqr")

[node name="Map" type="Node3D" parent="World"]

[node name="MultiplayerMenuMap" parent="World/Map" instance=ExtResource("3_lya7f")]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="World"]
_spawnable_scenes = PackedStringArray("res://data/scene/character/RigidPlayer.tscn", "res://data/scene/clay_ball/ClayBall.tscn", "res://data/scene/rocket/Rocket.tscn", "res://data/scene/bomb/Bomb.tscn", "res://data/scene/minigame/targets/Dog.tscn", "res://data/scene/water/WaterProjectile.tscn", "res://data/scene/fire/FireProjectile.tscn")
spawn_path = NodePath("..")

[node name="MultiplayerObjSpawner" type="MultiplayerSpawner" parent="World"]
spawn_path = NodePath("..")

[node name="MultiplayerMapSpawner" type="MultiplayerSpawner" parent="World"]
_spawnable_scenes = PackedStringArray("res://data/scene/BaseWorld/BaseWorld.tscn")
spawn_path = NodePath("../Map")
spawn_limit = 1

[node name="BrickGroups" type="Node" parent="World"]
script = ExtResource("4_nsdny")

[node name="GameCanvas" parent="." instance=ExtResource("5_ki5at")]
visible = false

[node name="MultiplayerMenu" parent="." instance=ExtResource("5_ti6c5")]

[node name="EditorCanvas" parent="." instance=ExtResource("7_c1osm")]
visible = false

[node name="LoadingCanvas" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="PanelContainer" parent="LoadingCanvas"]
self_modulate = Color(0.862745, 0, 0.807843, 1)
custom_minimum_size = Vector2(400, 80)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("9_macom")

[node name="Label" type="Label" parent="LoadingCanvas/Panel"]
layout_mode = 2
text = "Loading file...     Bricks: 0"
horizontal_alignment = 1

[node name="DebugCanvas" type="CanvasLayer" parent="."]

[node name="DebugMenu" type="VBoxContainer" parent="DebugCanvas"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -37.0
offset_right = 550.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 8
script = ExtResource("8_cc4qc")

[node name="Label" type="Label" parent="DebugCanvas/DebugMenu"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.643137)
theme_override_constants/outline_size = 6
text = "(Press [ ` ] to hide/show debug information)"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="DebugCanvas/DebugMenu"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="DebugCol1" type="RichTextLabel" parent="DebugCanvas/DebugMenu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 13
size_flags_stretch_ratio = 1.5
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.643137)
theme_override_constants/outline_size = 6
theme_override_fonts/bold_font = ExtResource("10_km8j6")
bbcode_enabled = true
text = "[b]Player[/b]
debug"
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="DebugCol2" type="RichTextLabel" parent="DebugCanvas/DebugMenu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 13
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.643137)
theme_override_constants/outline_size = 6
theme_override_fonts/bold_font = ExtResource("10_km8j6")
bbcode_enabled = true
text = "[b]Player[/b]
debug"
fit_content = true
scroll_active = false
autowrap_mode = 2
